# Auth

./: .env  .vercelignore  DEBUG_STEPS.md  ENV_VARIABLES.md  NEON_SETUP.md  QUICK_SETUP.md  README_DEPLOYMENT.md  TROUBLESHOOTING.md  UPDATE_ENV_VAR.md  VERIFY_SETUP.md  migrate_db.py  pyproject.toml  requirements.txt  test.db  vercel.json  vercel_build_fix.md
api/: index.py
app/: app.py
app/api/: deps.py
app/api/v1/: auth.py
app/core/: CRUD.py  config.py  database.py  database_init.py  security.py
app/models/: post.py  user.py
app/schemas/: user.py
app/services/: auth_service.py
app/templates/: admin-panel.html  feed.html  index.html  login.html  register.html
app/templates/static/: app.js  styles.css
